--- a/android/SaveTheBird/app/src/main/AndroidManifest.xml
+++ b/android/SaveTheBird/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/title"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HomeActivity">
+            >
+        </activity>
+        <activity android:name=".GameActivity" />
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".CharacterSelectActivity"></activity>
     </application>
 
 </manifest>
