--- a/android/SaveTheBird/app/src/main/AndroidManifest.xml
+++ b/android/SaveTheBird/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -19,8 +18,10 @@
             >
         </activity>
         <activity android:name=".GameActivity" />
-        <activity android:name=".SettingActivity" />
+        <activity android:name=".SettingActivity">
+        </activity>
         <activity android:name=".CharacterSelectActivity"></activity>
+        <service android:name="BgmService" />
     </application>
 
 </manifest>
